--- a/test/fixtures/images.yml
+++ b/test/fixtures/images.yml
@@ -11,16 +11,19 @@ two: {}
 #  column: value
 
 
+
+
 # == Schema Information
 #
 # Table name: images
 #
 #  id                :integer(4)      not null, primary key
-#  holder_id         :integer(4)
-#  holder_type       :string(255)
-#  data_file_name    :string(255)
-#  data_content_type :string(255)
-#  data_file_size    :integer(4)
-#  data_updated_at   :datetime
+#  owner_id          :integer(4)
+#  owner_type        :string(255)
+#  icon_file_name    :string(255)
+#  icon_content_type :string(255)
+#  icon_file_size    :integer(4)
+#  icon_updated_at   :datetime
+#  desc              :string(255)
 #
 
