--- a/test/fixtures/rooms.yml
+++ b/test/fixtures/rooms.yml
@@ -18,6 +18,9 @@ two:
   service_price: 9.99
   quantity: 1
 
+
+
+
 # == Schema Information
 #
 # Table name: rooms
@@ -32,5 +35,12 @@ two:
 #  quantity              :integer(4)
 #  created_at            :datetime
 #  updated_at            :datetime
+#  name                  :string(255)
+#  cate                  :string(255)
+#  desc                  :text
+#  icon_file_name        :string(255)
+#  icon_content_type     :string(255)
+#  icon_file_size        :integer(4)
+#  icon_updated_at       :datetime
 #
 
